fix stupic container in container overflow issue

--- a/src/components/list/style.css
+++ b/src/components/list/style.css
@@ -16,5 +16,6 @@
   overflow-y: hidden;
   margin: 20px 0;
   width: calc(100vw - 80px);
+  max-width: 1160px;
   box-sizing: border-box;
 }
